--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "bootstrap": "^5.3.2",
     "react": "16.12.0",
-    "react-bootstrap": "1.0.0-beta.16",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "16.12.0",
     "react-scripts": "3.0.1"
   },
@@ -14,8 +15,8 @@
     "typescript": "3.3.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
